# VANE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_clean.sh  build_deps.sh  build_sdk.sh  engine.pkg  main.cpp  toolchain.cmake  vane.hpp  vane_test.cpp  vaneroot.pkg
include/vane/: SDL.h  SDL.hpp  config.hpp  glew.h  stdint.hpp  types.hpp  vane.hpp  vec.hpp
include/vane/core/: abi.hpp  app.hpp  assert.hpp  engine.hpp  file.hpp  game.hpp  gl.hpp  log.hpp  object.hpp  platform.hpp  scene.hpp  scenegroup.hpp  service.hpp  types.hpp
include/vane/dsa/: node.hpp  tree.hpp  tree.inl
include/vane/gfx/: gfx.hpp  gl.hpp  image.hpp  render.hpp  renderer.hpp  scene.hpp  shader.hpp  srv.hpp  vertex.hpp
include/vane/graphics/: types.hpp
include/vane/platform/: SDL.hpp  platform.hpp  types.hpp
include/vane/util/: file.hpp  ratelimited.hpp  reliant.hpp
include/vane/vfs/: archive.hpp  filesystem.hpp  vfs.hpp
include/vane/world/: objattr.hpp  object.hpp  scene.hpp  scenegroup.hpp  service.hpp  world.hpp
include/vane_SDL2/: SDL_revision.h
src/: CMakeLists.txt  config.cpp  log.cpp  main.cpp  tccdemo.cpp  vane.cpp  vpkg.cpp
src/core/: CMakeLists.txt  app.cpp  file.cpp  game.cpp  keyboard.cpp  log.cpp  log.hpp  mouse.cpp  objattr.cpp  object.cpp  object.hpp  platform.cpp  platform.hpp  scene.cpp  scene.hpp  scenegroup.cpp  service.cpp  window.cpp
src/dsa/: CMakeLists.txt
src/gfx/: CMakeLists.txt  camera.cpp  gfx.cpp  gl.cpp  image.cpp  shader.cpp  srv.cpp
src/graphics/: CMakeLists.txt  camera.cpp  image.cpp
src/io/: CMakeLists.txt  io.cpp
src/platform/: CMakeLists.txt  keyboard.cpp  mouse.cpp  platform.cpp  window.cpp
src/tooling/: CMakeLists.txt  vpkg.cpp
src/util/: CMakeLists.txt  cfgparser.cpp  file.cpp
src/vane/: vane.cpp
src/vane/core/: CMakeLists.txt  cfgparser.cpp  engine.cpp  file.cpp  log.cpp  object.cpp
src/vane/dsa/: CMakeLists.txt  node.cpp  tree.cpp
src/vane/gfx/: CMakeLists.txt  render.cpp  shader.cpp
src/vane/platform/: keyboard.cpp  mouse.cpp  platform.hpp  window.cpp
src/vane/tooling/: CMakeLists.txt  vpart.cpp  vpkg.cpp  vukg.cpp
src/vane/util/: CMakeLists.txt
src/vane/vfs/: CMakeLists.txt  archive.cpp
src/vane/world/: CMakeLists.txt  object.cpp  scene.cpp  scenegroup.cpp  world.cpp
src/vaneproj/: CMakeLists.txt  srv-gfx.cpp
src/vaneroot/: env.sh
src/vaneroot/engine/: classdefs.json
src/vaneroot/gamedata/: classdefs.json  prefabs.json
src/vfs/: CMakeLists.txt  archive.cpp  filesystem.cpp  vfs.cpp
src/world/: CMakeLists.txt  world.cpp
vane/: CMakeLists.txt  env.sh  init.json
vane/include/vane/: stdint.hpp
vane/include/vane/core/: abi.hpp  gl.hpp  platform.hpp
vane/include/vane/dsa/: set.hpp
vane/include/vane/util/: file.hpp
vane/include/vane/vfs/: archive.hpp
vane/src/core/: gl.cpp  keyboard.cpp
vane/src/dsa/: tree.cpp
vane/src/util/: CMakeLists.txt
vane/src/vanetools/: CMakeLists.txt
vane/vaneroot/: env.sh
vane_sdk/: CMakeLists.txt  build.sh  vane_sdk.sh
vane_sdk/example/: CMakeLists.txt  game.cpp
vane_sdk/gamefolder/gamedata/: types.txt
vane_sdk/gamefolder/vane/: vane.cfg  vane.json
vane_sdk/sdk/: build.sh
vane_sdk/src/: CMakeLists.txt
vane_sdk/src_example/: game.cpp
vanepkg/gamedata/: types.json
vaneproj/: CMakeLists.txt  build.sh  game.cpp  game.hpp  main.cpp  srv-game.cpp
vaneproj/gamefolder/vane/: vane.cfg
vaneproj/include/vane/: types.hpp  vane.hpp
vaneproj/include/vane/core/: objattr.hpp  scene.hpp
vaneproj/include/vane/gfx/: gfx.hpp  render.hpp
vaneproj/src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
vaneroot/: env.sh
vaneroot/engine/: init.json
vaneroot/engine/model/: unit-sphere.gltf
vroot/data/: classdefs.json  prefabs.json  vane.cfg
vscripts/: vane_sdk.sh
vscripts/vane_sdk/sdk/: CMakeLists.txt
vscripts/vane_sdk/sdk/src/: game.cpp
