cmake_minimum_required(VERSION 3.21)

file(READ "${CMAKE_SOURCE_DIR}/version.txt" VANE_VERSION)
add_definitions(-DVANE_VERSION="${VANE_VERSION}")

project(vane VERSION ${VANE_VERSION})

string(TOLOWER ${CMAKE_BUILD_TYPE} VANE_BUILD_TYPE)
# set(VANE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}-${VANE_VERSION}")
# set(VANE_INSTALL_INCLUDE_DIR "${VANE_INSTALL_DIR}/include")
# set(VANE_INSTALL_LIBRARY_DIR "${VANE_INSTALL_DIR}/lib")
set(VANE_EXTERN_INSTALL_DIR "${CMAKE_SOURCE_DIR}/external/install/${VANE_BUILD_TYPE}")
set(VANE_EXTERN_INCLUDE_DIR "${VANE_EXTERN_INSTALL_DIR}/include")
set(VANE_EXTERN_LIBRARY_DIR "${VANE_EXTERN_INSTALL_DIR}/lib")

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "$ORIGIN" "${VANE_EXTERN_LIBRARY_DIR}")

include_directories("${CMAKE_SOURCE_DIR}/include/" "${VANE_EXTERN_INCLUDE_DIR}")

find_package(OpenGL REQUIRED)
# find_package(assimp REQUIRED PATHS "${VANE_EXTERN_LIBRARY_DIR}/cmake/assimp-6.0" NO_DEFAULT_PATH)
find_package(SDL3 REQUIRED PATHS "${VANE_EXTERN_LIBRARY_DIR}/cmake/SDL3" NO_DEFAULT_PATH)

add_library(glad STATIC IMPORTED)
set_target_properties(glad PROPERTIES
    IMPORTED_LOCATION "${VANE_EXTERN_LIBRARY_DIR}/libglad${CMAKE_STATIC_LIBRARY_SUFFIX}"
    INTERFACE_INCLUDE_DIRECTORIES ${VANE_EXTERN_INCLUDE_DIR}
)

add_library(glm STATIC IMPORTED)
set_target_properties(glm PROPERTIES
    IMPORTED_LOCATION "${VANE_EXTERN_LIBRARY_DIR}/libglm${CMAKE_STATIC_LIBRARY_SUFFIX}"
    INTERFACE_INCLUDE_DIRECTORIES ${VANE_EXTERN_INCLUDE_DIR}
)



add_subdirectory("${CMAKE_SOURCE_DIR}/src/")

add_executable(${PROJECT_NAME} "${CMAKE_SOURCE_DIR}/src/main.cpp")
# set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "vane")
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
target_link_libraries(${PROJECT_NAME} PRIVATE
    glad vane_common SDL3::SDL3-shared
    # assimp::assimp # vanevm::vanevm
)

file(GLOB VANE_RUNTIME_LIBS "${VANE_EXTERN_LIBRARY_DIR}/*.so*")
install(FILES ${VANE_RUNTIME_LIBS} DESTINATION "bin")
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ".")
